# grid_server

./: .gitignore  LICENSE  README.md  config.ini  pyproject.toml  run.py
grid_client/: client.py  render.py
grid_server/: default.ini  default.json  server.py  world.json
grid_server/classes/: array.py  data.py  environment.py  object.py  object_list.py  player.py  test_data.py
